cmake_minimum_required(VERSION 3.22)
project(TP6 C)

set(CMAKE_C_STANDARD 99)

# Executable exo 1
add_executable(TP5_exo1 exo1.c)

# Executable exo 2
add_executable(TP5_exo2 exo2.c)

# Executable exo 3
add_executable(TP5_exo3 exo3.c)

# Executable exo 4
add_executable(TP5_exo4 exo4.c)

# Executable exo 5
add_executable(TP5_exo5 exo5.c)


